# greenkpi_project

./: README.md  pyproject.toml  sbickley_panalogylab_greenkpis_v1.py
data/output/: GreenKPI Metrics Upload Template.xlsx
